# fgojunks

./: .gitignore  csv2report.py
jpeger/: .gitignore  Makefile  go.mod  main.go
kaifu/: crawl.py  pyproject.toml  settings.py.example  test_crawl.py
material_simulator/: Makefile  genmaterialdata.py  genservantdata.py
matsort/: main.py
pageinfo/: .gitignore  pageinfo.py  runtest.bash
pageinfo/tests/: pageinfo_test.py
shrinker/: shrinker.py
