[tool.poetry]
name = "kaifu"
version = "0.1.0"
description = ""
authors = ["max747 <takanori.kojima@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
tweepy = "^4.10.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
